# teslacam-telemetry

./: .gitignore  CHANGELOG.md  README.md  desktop_ui.py  main.py  project.py  pyproject.toml  requirements.txt
.github/workflows/: package.yml  release.yml  windows-app.yml
docs/: packaging.md  releasing.md
modules/: __init__.py  app_service.py  config.py  data_handler.py  get_state.py  layout.py  overlay_renderer.py  sei_extractor.py  shapes.py  ui_helpers.py  video_processor.py
packaging/: TeslaCamTelemetry.spec
scripts/: build_windows.ps1
tests/: test_app_service.py  test_desktop_ui.py  test_get_state.py  test_overlay_renderer.py  test_ui_helpers.py
utils/: __init__.py
utils/fonts/: __init__.py
